refactor: simplify maven-compiler-plugin configuration by using release instead of source/target and remove unnecessary compiler arguments